# bookle

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  claude.md
.github/workflows/: release.yml
bookle-cli/: Cargo.toml  README.md
bookle-cli/src/: main.rs
bookle-cli/src/commands/: batch.rs  convert.rs  info.rs  mod.rs  validate.rs
bookle-cli/tests/: cli_tests.rs
bookle-core/: Cargo.toml  README.md
bookle-core/benches/: conversion.rs
bookle-core/src/: error.rs  lib.rs
bookle-core/src/decoder/: epub.rs  kepub.rs  lit.rs  markdown.rs  mobi.rs  mod.rs  pdf.rs
bookle-core/src/encoder/: epub.rs  kepub.rs  mod.rs  typst_pdf.rs
bookle-core/src/storage/: mod.rs
bookle-core/src/types/: block.rs  book.rs  chapter.rs  metadata.rs  mod.rs  resource.rs  toc.rs
bookle-core/tests/: conversion_tests.rs  snapshot_tests.rs
bookle-core/tests/snapshots/: conversion_tests__alice_azw3_metadata.snap  conversion_tests__alice_epub_metadata.snap  conversion_tests__alice_epub_to_typst.snap  conversion_tests__around_the_world_azw3_metadata.snap  conversion_tests__around_the_world_epub_metadata.snap  conversion_tests__famous_paintings_epub_metadata.snap  conversion_tests__famous_paintings_mobi_metadata.snap  conversion_tests__sample1_epub_metadata.snap  conversion_tests__sample1_mobi_metadata.snap  conversion_tests__sample1_mobi_to_typst.snap  snapshot_tests__book_ir_json.snap  snapshot_tests__code_block_typst.snap  snapshot_tests__list_variations_typst.snap  snapshot_tests__nested_formatting_typst.snap  snapshot_tests__simple_paragraph_typst.snap  snapshot_tests__special_chars_typst.snap  snapshot_tests__typst_output.snap
bookle-desktop/: README.md  index.html  package.json
bookle-desktop/src/: styles.css
bookle-desktop/src-tauri/: Cargo.toml  tauri.conf.json
bookle-desktop/src-tauri/icons/: icon.icns
bookle-desktop/src-tauri/src/: lib.rs  main.rs
bookle-server/: Cargo.toml  README.md
bookle-server/src/: lib.rs  main.rs  routes.rs  state.rs
bookle-server/src/handlers/: library.rs  mod.rs  opds.rs  sync.rs
bookle-server/src/opds/: mod.rs  opensearch.rs  types.rs  xml.rs
bookle-server/tests/: api_tests.rs
docs/: CNAME  index.html
frontend-web/: README.md  index.html  package-lock.json  package.json
frontend-web/src/: App.tsx  index.css
frontend-web/src/components/: FileUpload.tsx  Layout.tsx  ServerEventsHandler.tsx  Toast.tsx
frontend-web/src/hooks/: useServerEvents.ts
frontend-web/src/lib/: api.ts  platform.ts
frontend-web/src/pages/: BookDetail.tsx  Library.tsx
frontend-web/src/types/: index.ts
