[package]
name = "bookle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Parallel processing
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
zip = "2"
serde_json = "1"
