[package]
name = "bookle-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookle-core = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Multipart uploads
axum-extra = { version = "0.9", features = ["multipart"] }

# SSE
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# OPDS XML generation
quick-xml = { version = "0.36", features = ["serialize"] }

# URL encoding for search parameters
urlencoding = "2.1"

[dev-dependencies]
axum-test = "15"
tempfile = "3"
