[package]
name = "bookle-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bookle Desktop - Tauri-based ebook management app"

[lib]
name = "bookle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bookle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
uuid = { workspace = true }
directories = "5"
